--- a/_layouts/knowledge-base.html
+++ b/_layouts/knowledge-base.html
@@ -32,9 +32,9 @@
               </a>
             </li>
             <li>
-              <a href="{{ '/aws' | relative_url }}" class="kb-nav-link {% if page.url contains '/aws' %}active{% endif %}">
-                <span class="nav-icon">☁️</span>
-                <span class="nav-text">AWS</span>
+              <a href="{{ '/devops_roadmap' | relative_url }}" class="kb-nav-link {% if page.url contains '/devops_roadmap' %}active{% endif %}">
+                <span class="nav-icon">♾️</span>
+                <span class="nav-text">Devops Roadmap</span>
               </a>
             </li>
             <li>
